Revision history for CHI-Memoize

** denotes an incompatible change

0.02  May 2, 2012

0.01  May 2, 2012

- Initial version
